added preface m_command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MzUzMTE3NzI2ODI0NDY0Mzk0.DVYmuw.of7k0Sok7zBxPnv6wVCswC-LR6E",
+  "token": "NDA5MDUwNTMxMzIwMDM3Mzc2.DVY9zw.w9d77fwDV7FQzSdlsqbd0Z2KTRw",
   "prefix": ";;",
   "mutedRole": "Muted"
 }
