--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "symfox",
   "version": "1.0.0",
   "description": "Discord bot",
-  "main": "index.js",
+  "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.1.0",
-    "discord.js-commando": "^0.9.0",
     "python": "0.0.4"
   },
   "engines":{
