--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MzUzMTE3NzI2ODI0NDY0Mzk0.DVYmuw.of7k0Sok7zBxPnv6wVCswC-LR6E",
+  "token": "MzUzMTE3NzI2ODI0NDY0Mzk0.DVpJ-g.xYlC5mi0JaI942nAwHuN4ADLPlA",
   "prefix": ";;",
   "mutedRole": "Muted"
 }
