--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MzUzMTE3NzI2ODI0NDY0Mzk0.DVpJ-g.xYlC5mi0JaI942nAwHuN4ADLPlA",
+  "token": "MzUzMTE3NzI2ODI0NDY0Mzk0.DV26MA.f4kAWXcQbYw4nvGHN7ErSB6AsFo",
   "prefix": ";;",
   "mutedRole": "Muted"
 }
